fix message overlap

--- a/src/views/styles/mainMenu.css
+++ b/src/views/styles/mainMenu.css
@@ -38,13 +38,18 @@
     -fx-text-fill: white;
 }
 #messageText {
-    -fx-font-size: 30px;
+    -fx-font-size: 32px;
     -fx-font-weight: 900;
     -fx-text-alignment: center;
     -fx-fill: white;
-    -fx-stroke: black;
-    -fx-stroke-width: 0.7px;
+    -fx-stroke: rgb(51, 51, 51);
+    -fx-stroke-width: 1.4px;
 }
 #messageBox {
     -fx-background-color: green;
+}
+#grid{
+    -fx-border-color:rgb(114, 97, 0);
+    -fx-border-width: 8px;
+    -fx-border-radius: 4px;
 }
